--- a/01-reinforcement/src/index.css
+++ b/01-reinforcement/src/index.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 75vh;
 }
 
 .utils__loading-indicator {
-  border: 10px solid #474747;
+  border: 8px solid #474747;
   width: 60px;
   height: 60px;
   border-radius: 50%;
